# Computational_Science

./: README.md
CUDA/: prefixSum_a.cpp  prefixSum_b.cu  skalarPro.cu
Gauss–Seidel and Jacobi methods/: CMakeLists.txt  main.cpp
Matrix multiplication in memory hierarchies/: task1.cpp  task2.cpp  task3.cpp
Multithreading/: task1.cpp  task2.cpp
Schur complement/: CMakeLists.txt  aufg15.cpp  display.cpp  schurmatrix.cpp  teilmatrix.cpp
Schwarz iteration/: CMakeLists.txt  altSchwarzCG.cpp
Task1 Differential_Equation/: Aufgabe3_DanJia.m
Task2 /: Aufgabe4_DanJia.m
Vectorization with SIMD/: Aufgabe7.cpp  JacobiSIMD.cpp  JacobiSkalar.cpp  task1.cpp  task3.cpp  task4.cpp
